--- a/JS07 Fetch y Web APIs/index.html
+++ b/JS07 Fetch y Web APIs/index.html
@@ -10,11 +10,12 @@
 
     <script src="./src/main.js" async defer></script>
     <script src="./src/async.js" async defer></script>
+    <script src="./src/login.js" async defer></script>
 
 </head>
 
 <body>
-    <div class="counter-container">
+    <div class="container">
         <p id="contador"></p>
         <div class="btn-containers">
             <button class="btn-count" id="btn-count-plus">
@@ -25,6 +26,19 @@
             </button>
         </div>
     </div>
+
+    <section class="form-section">
+        <div class="container">
+
+            <form action="pages/pokedex.html" method="">
+                <label for="email">Email</label>
+                <input type="text" id="email" pattern="^[\w.+\-]+@gmail\.com$" required>
+                <input type="submit" value="Login" id="btn-submit">
+            </form>
+
+        </div>
+    </section>
+
 </body>
 
 </html>
